[gd_scene load_steps=2 format=3 uid="uid://br73d5fyt6ecp"]

[ext_resource type="Script" path="res://scenes/minigames/copying-files/copying_files.gd" id="1_obpcf"]

[node name="CopyingFiles" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obpcf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -272.0
offset_top = -176.0
offset_right = 285.0
offset_bottom = 188.0
color = Color(0.247059, 0.282353, 0.8, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -267.0
offset_top = -133.0
offset_right = 281.0
offset_bottom = 184.0

[node name="WindowTitleLabel" type="RichTextLabel" parent="."]
offset_left = -263.0
offset_top = -172.0
offset_right = 261.0
offset_bottom = -132.0
theme_override_font_sizes/normal_font_size = 27
text = "C:/sala_komputerowa/stanowsko4/desktop"

[node name="PromptLabel" type="RichTextLabel" parent="."]
offset_left = -200.0
offset_top = -104.0
offset_right = 210.0
offset_bottom = -20.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 29
text = "Czy na pewno chcesz skopiować plik \"egzamin_rozwiazanie.cs\"?"

[node name="SuccessMessageLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -208.0
offset_top = -104.0
offset_right = 230.0
offset_bottom = -20.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 29
text = "Kopiowanie zakończone pomyślnie"

[node name="Confirm" type="Button" parent="."]
offset_left = -62.0
offset_top = 84.0
offset_right = 73.0
offset_bottom = 131.0
text = "SKOPIUJ"

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0, 1, 0, 1)
offset_left = -144.0
offset_top = 24.0
offset_right = 156.0
offset_bottom = 73.0
show_percentage = false

[node name="EndButton" type="Button" parent="."]
visible = false
offset_left = -56.0
offset_top = 99.0
offset_right = 62.0
offset_bottom = 145.0
text = "ZAKOŃCZ"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09

[connection signal="button_down" from="Confirm" to="." method="_on_confirm_button_down"]
[connection signal="button_down" from="EndButton" to="." method="_on_end_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
